--- a/WPFExperiment/Controls/EditorTabItem.xaml
+++ b/WPFExperiment/Controls/EditorTabItem.xaml
@@ -11,11 +11,27 @@
             <ColumnDefinition Width="200" MinWidth="200"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <DockPanel Name="DockPanelProfile" HorizontalAlignment="Left" Grid.Column="0">
+            <ListView Name="lstConfigurations" DisplayMemberPath="Name"></ListView>
             <Button Name="ButtonAddConfiguration" Style="{StaticResource EditorButton}">+</Button>
         </DockPanel>
         <GridSplitter Grid.Column="0" Grid.RowSpan="1" ResizeDirection="Columns" Width="5"></GridSplitter>
-        <StackPanel Name="StackPanelProperties" Orientation="Vertical" Grid.Column="1">
-            <TextBox TextWrapping="Wrap">This Section will display configuration or profile properties</TextBox>
+        <StackPanel Name="StackPanelProperties" Orientation="Vertical" Grid.Column="1" DataContext="{Binding ElementName=lstConfigurations, Path=SelectedItem}">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+                
+                <TextBlock Grid.Row="0" Grid.Column="0" TextWrapping="Wrap">Name:</TextBlock>
+                <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Name}"></TextBox>
+                
+                <Button Grid.Row="1" Grid.Column="0" Style="{StaticResource ToolbarButton}" Content="Update"></Button>
+                <Button Grid.Row="1" Grid.Column="1" Style="{StaticResource ToolbarButton}" Content="Delete Configuration"></Button>
+            </Grid>
         </StackPanel>
     </Grid>
 </TabItem>
