--- a/WPFExperiment/Controls/EditorTabItem.xaml
+++ b/WPFExperiment/Controls/EditorTabItem.xaml
@@ -11,7 +11,15 @@
             <ColumnDefinition Width="200" MinWidth="200"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <DockPanel Name="DockPanelProfile" HorizontalAlignment="Left" Grid.Column="0">
-            <ListView Name="lstConfigurations" DisplayMemberPath="Name"></ListView>
+            <ListBox Name="lstConfigurations">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Border Margin="5" BorderThickness="1" CornerRadius="4">
+                            <Button Style="{StaticResource EditorButton}" Content="{Binding Path=Name}"></Button>
+                        </Border>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
             <Button Name="ButtonAddConfiguration" Style="{StaticResource EditorButton}">+</Button>
         </DockPanel>
         <GridSplitter Grid.Column="0" Grid.RowSpan="1" ResizeDirection="Columns" Width="5"></GridSplitter>
