--- a/WPFExperiment/View/Controls/EditorTabItem.xaml
+++ b/WPFExperiment/View/Controls/EditorTabItem.xaml
@@ -1,4 +1,4 @@
-﻿<TabItem x:Class="WPFExperiment.Controls.EditorTabItem"
+﻿<TabItem x:Class="WPFExperiment.View.Controls.EditorTabItem"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
