--- a/WPFExperiment/MainWindow.xaml
+++ b/WPFExperiment/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:cmd="clr-namespace:WPFExperiment.ViewModel.Commands"
+        xmlns:c="clr-namespace:WPFExperiment.View.Controls"
         Title="WPFE MainWindow">
     <Window.CommandBindings>
         <CommandBinding Command="cmd:ApplicationCommands.Exit" Executed="CommandBinding_Executed"></CommandBinding>
@@ -10,9 +11,12 @@
         <StackPanel Name="StackPanelMenu" Orientation="Horizontal">
             <Menu Name="MenuMain" Height="auto">
                 <MenuItem Name="MenuItemFile" Header="File">
-                    <MenuItem Name="MenuItemFileNew" Header="New Configuration" Command="New"></MenuItem>
+                    <MenuItem Name="MenuItemFileNew" Header="New Profile" Command="New"></MenuItem>
                     <MenuItem Name="MenuItemExit" Header="Exit" Command="cmd:ApplicationCommands.Exit"></MenuItem>
                 </MenuItem>
+                <MenuItem Header="Edit"></MenuItem>
+                <MenuItem Header="Tools"></MenuItem>
+                <MenuItem Header="Help"></MenuItem>
             </Menu>
         </StackPanel>
         <WrapPanel Orientation="Horizontal" Name="WrapPanelToolbar">
@@ -28,7 +32,18 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <TextBox Name="txtWelcome" Text="Welcome"></TextBox>
-            <TabControl Name="TabControlEditor" Visibility="Collapsed" ItemsSource="{Binding}"></TabControl>
+            <TabControl Name="TabControlEditor" Visibility="Collapsed" ItemsSource="{Binding}">
+                <TabControl.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding Path=Profile.Name}"></TextBlock>
+                    </DataTemplate>
+                </TabControl.ItemTemplate>
+                <TabControl.ContentTemplate>
+                    <DataTemplate>
+                        <c:Editor></c:Editor>
+                    </DataTemplate>
+                </TabControl.ContentTemplate>
+            </TabControl>
         </Grid>
     </StackPanel>
 </Window>
