--- a/WPFExperiment/MainWindow.xaml
+++ b/WPFExperiment/MainWindow.xaml
@@ -3,10 +3,14 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:cmd="clr-namespace:WPFExperiment.ViewModel.Commands"
         xmlns:c="clr-namespace:WPFExperiment.View.Controls"
+        xmlns:vm="clr-namespace:WPFExperiment.ViewModel"
         Title="WPFE MainWindow">
     <Window.CommandBindings>
         <CommandBinding Command="cmd:ApplicationCommands.Exit" Executed="CommandBinding_Executed"></CommandBinding>
     </Window.CommandBindings>
+    <Window.DataContext>
+        <vm:WindowViewModel></vm:WindowViewModel>
+    </Window.DataContext>
     <StackPanel Name="StackPanelMain" Orientation="Vertical">
         <StackPanel Name="StackPanelMenu" Orientation="Horizontal">
             <Menu Name="MenuMain" Height="auto">
@@ -32,7 +36,7 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <TextBox Name="txtWelcome" Text="Welcome"></TextBox>
-            <TabControl Name="TabControlEditor" Visibility="Collapsed" ItemsSource="{Binding}">
+            <TabControl Name="TabControlEditor" Visibility="Collapsed" ItemsSource="{Binding}" DataContext="{Binding Path=Editors}">
                 <TabControl.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{Binding Path=Profile.Name}"></TextBlock>
