--- a/WPFExperiment/App.xaml
+++ b/WPFExperiment/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="WPFExperiment.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             StartupUri="View/MainWindowView.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <Style TargetType="MenuItem">
