--- a/WPFExperiment/View/Controls/EditorView.xaml
+++ b/WPFExperiment/View/Controls/EditorView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="WPFExperiment.View.Controls.Editor"
+﻿<UserControl x:Class="WPFExperiment.View.Controls.EditorView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
